objects/LLC_BI__Service_Mgmt__c.object
<CustomObject>
    <description>This object allows the user to track high level information about a service that also includes lookups and relationships to multiple other objects.</description>
    <fields>
        <fullName>LLC_BI__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system uses this lookup field to determine the account that is being serviced. By default, this field is blank.</description>
        <inlineHelpText>Enter the correct Account object lookup in this field.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service Mgmt</relationshipLabel>
        <relationshipName>Service_Mgmt</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collateral__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system uses this lookup field to determine the Collateral Mgmt object that is being serviced. By default, this field is blank.</description>
        <inlineHelpText>Enter the correct Collateral Mgmt object lookup in this field.</inlineHelpText>
        <label>Collateral Mgmt</label>
        <referenceTo>LLC_BI__Collateral__c</referenceTo>
        <relationshipLabel>Service Mgmt</relationshipLabel>
        <relationshipName>Service_Mgmt</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system uses this lookup field to determine the Contact that is being serviced. By default, this field is blank.</description>
        <inlineHelpText>Enter the correct Contact object lookup in this field.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Service Mgmt</relationshipLabel>
        <relationshipName>Service_Mgmt</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Context_Id__c</fullName>
        <description>The system populates this required text field to indicate that this is the object being serviced.</description>
        <inlineHelpText>Indicates the item being serviced.</inlineHelpText>
        <label>Context Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Highest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user populates this lookup field to specify the related Service Mgmt object. The default value is blank.</description>
        <inlineHelpText>Enter the related Service Mgmt object lookupKey in this field to determine the related Service Mgmt record.</inlineHelpText>
        <label>Highest</label>
        <referenceTo>LLC_BI__Service_Mgmt__c</referenceTo>
        <relationshipLabel>Service Mgmts (Highest)</relationshipLabel>
        <relationshipName>Highest_Service_Mgmts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system uses this lookup field to determine the Loan being serviced. By default, this field is blank.</description>
        <inlineHelpText>Enter the correct Loan object lookup in this field.</inlineHelpText>
        <label>Loan</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Service Mgmt</relationshipLabel>
        <relationshipName>Service_Mgmt</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Professional_License_Number_Firm__c</fullName>
        <description>Users populate this optional text field to indicate the professional license number for the relationship. For real estate transactions, this field may represent the license number of the mortgage or real estate broker. By default, this field is blank.</description>
        <inlineHelpText>Enter the professional license number for the relationship, such as a mortgage or real estate broker license number.</inlineHelpText>
        <label>Professional License Number (Firm)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Professional_License_Number_Individual__c</fullName>
        <description>Users populate this optional text field to indicate the professional license number for the individual. For real estate transactions, this field may represent the license number of the mortgage or real estate broker. By default, this field is blank.</description>
        <inlineHelpText>Enter the professional license number for the individual, such as a mortgage or real estate broker license number.</inlineHelpText>
        <label>Professional License Number (Individual)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Professional_License_State_Firm__c</fullName>
        <description>Users populate this optional picklist to indicate the state where the relationship is licensed. By default, the field is blank.</description>
        <inlineHelpText>Select the state in which the license is issued for the relationship.</inlineHelpText>
        <label>Professional License State (Firm)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Professional_License_State_Individual__c</fullName>
        <description>Users populate this optional picklist to indicate the state where the individual&apos;s professional license is issued. By default, the field is blank.</description>
        <inlineHelpText>Select the state in which the professional license is issued for the individual.</inlineHelpText>
        <label>Professional License State (Individual)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Service_Provider_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system uses this lookup fields to determine which Contact is providing the service. By default, this field is blank.</description>
        <inlineHelpText>Enter the Contact lookup providing the service in this field.</inlineHelpText>
        <label>Service Provider Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Service Mgmt Provided</relationshipLabel>
        <relationshipName>Service_Mgmt_Provided</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Service_Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system uses this lookup fields to determine which Account is providing the service. By default, this field is blank.</description>
        <inlineHelpText>Enter the Account lookup providing the service in this field.</inlineHelpText>
        <label>Service Provider</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service Mgmt Provided</relationshipLabel>
        <relationshipName>Service_Mgmt_Provided</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Service_Type__c</fullName>
        <description>The user populates this picklist field to determine the service type. By default, this field is blank.</description>
        <inlineHelpText>Select the correct Service type.</inlineHelpText>
        <label>Service Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Appraiser</fullName>
                </value>
                <value>
                    <fullName>Attorney</fullName>
                </value>
                <value>
                    <fullName>Inspector</fullName>
                </value>
                <value>
                    <fullName>Third Party Reports</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Status__c</fullName>
        <description>The user selects this optional picklist field to indicate if the service if active, inactive, or pending. By default, this field is blank.</description>
        <inlineHelpText>Select the appropriate status of the service.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Service Mgmt</label>
    <nameField>
        <displayFormat>SM-{000000000}</displayFormat>
        <label>Service Mgmt Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Mgmt</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>